# iaj_evades

./: .gitignore  COMMANDS.md  PROGRESS.md  README.md  best_genome.json  best_model.json  config.py  entities.py  game.py  genetic_ai.py  main.py  package-lock.json  patch.py  patch2.py  patch3.py  patch4.py  patch5.py  repomix-output.xml  test_trainer_loop.patch  todo.md  train_ga.py
rust_evades/: Cargo.toml
rust_evades/src/: autopilot.rs  config.rs  game.rs  headless.rs  lib.rs  main.rs  model_player.rs  neat_player.rs  render.rs  sensing.rs
rust_evades_dqn/: Cargo.toml  patch.diff
rust_evades_dqn/src/: lib.rs  live_visualizer.rs  main.rs  model.rs  network.rs  observation.rs  trainer.rs
rust_evades_neat/: Cargo.toml
rust_evades_neat/src/: lib.rs  main.rs  model.rs  neat.rs  observation.rs  trainer.rs
rust_evades_web/: Cargo.toml  best_model.json  package-lock.json
rust_evades_web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
rust_evades_web/frontend/src/: App.tsx  index.css
rust_evades_web/frontend/src/components/: Console.tsx  EvaluationPanel.tsx  ModelSelector.tsx  QuickSettingsSidebar.tsx  SettingsPanel.tsx  StatCard.tsx  Toast.tsx  TrainingPanel.tsx  Visualizer.tsx
rust_evades_web/frontend/src/contexts/: SocketContext.tsx  ToastContext.tsx
rust_evades_web/src/: cmd_runner.rs  evaluation_manager.rs  main.rs  training_manager.rs
src/core/: components.py  engine.py  systems.py
src/rl/: wrapper.py
src/ui/: renderer.py  states.py
training_runs/long_neat/: best_model.json  checkpoint_gen_0025.json  (+29 more)
