[package]
name = "rust_evades_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
rust_evades = { path = "../rust_evades" }
rust_evades_dqn = { path = "../rust_evades_dqn" }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10.0"
